--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Recyclerview
-    implementation 'androidx.recyclerview:recyclerview.1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
